refactored root endpoints, added add-bookmark endpoint, added feature & unit tests, added form to index.erb

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,3 +1,8 @@
+<form action="/add-bookmark" method="post">
+  <input type="text" id="new_bookmark" name="bookmark_url">
+  <input type="submit" value="Add Bookmark">
+</form>
+
 <ul>
   <% @bookmarks.each do |bookmark| %>
     <li><%= bookmark %></li>
