--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,10 +1,9 @@
-<form action="/add-bookmark" method="post">
-  <input type="text" id="new_bookmark" name="bookmark_url">
-  <input type="submit" value="Add Bookmark">
-</form>
-
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+    <li>
+      <a href="<%= bookmark.url %>">
+        <%= bookmark.title %>
+      </a>
+    </li>
   <% end %>
 </ul>
